--- a/vignettes/a01_global.Rmd
+++ b/vignettes/a01_global.Rmd
@@ -5,15 +5,20 @@ output:
    toc: yes
    toc_depth: 2
    toc_float: yes
+params:
+ building_docs: true
 ---
 
 ```{r include=FALSE}
 ## for knitting into documentation file
-# knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
+
+if(exists("params") && !is.null(params$building_docs) && params$building_docs == TRUE ){
+  knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
+}
 ```
 
 The global.R file is run once before your app starts. 
-Any R objects created here global.R file become available to the app.R file, 
+Any R objects created here become available to the app.R file, 
 the ui.R and the server.R files. 
 # Main parameters
 
@@ -21,6 +26,7 @@ the ui.R and the server.R files.
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~  Main parameters ----
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+PARAMS <- list()
 ```
 
 The application has been built to work with two main data sources: 
@@ -28,17 +34,37 @@ contact tracing data from KoboCollect-exported csv files,
 and contact tracing data from a Go.Data instance (by direct API connection)
 Here, at the beginning of the global.R file, 
 we set the PARAMS$country_code variable to the country being worked on. 
-This ensures that the correct data import elements are loaded in the app, 
-either the elements for KoboCollect csv import and processing, 
+This ensures that the correct data import elements are loaded in the app,
+that is, either the elements for KoboCollect csv import and processing, 
 or the elements for connecting to, and downloading from the Go.Data instance.
 
 ```{r }
-PARAMS <- list()
 ## Uncomment the below to change country app version
-PARAMS$country_code <- "UGA"
+#PARAMS$country_code <- "UGA"
 #PARAMS$country_code <- "COG"
 #PARAMS$country_code <- "CIV" 
+PARAMS$country_code <- "SAMPLE"
+```
+
+When `testing_mode` is set to true, the app loads with only a small subset of the data. 
+This hastens loading speed and saves your time.
+
+```{r }
 PARAMS$testing_mode <- FALSE
+```
+
+When `remove_help_tab` is set to false, RStudio loads the PDF from the help tab
+as a separate window. Somewhat annoying
+
+```{r }
+PARAMS$remove_help_tab <- TRUE
+```
+
+For the Go.Data-sourced sample data, information on administrative levels is mostly missing.
+But this makes for an uninteresting dashboard. 
+Turn on this parameter to add in sample administrative levels
+
+```{r }
 PARAMS$fake_data <- TRUE
 ```
 
@@ -54,7 +80,8 @@ I would normally load packages with p_load
 but I had some trouble with this when deploying to shiny 
 
 ```{r message=FALSE, warning=FALSE, fig.width=7}
-library(remotes)
+
+library(devtools)
 if (!webshot::is_phantomjs_installed()) webshot::install_phantomjs()
 library(webshot)  ##  for screenshots of htmlwidgets when outputting
 library(here) 
@@ -62,7 +89,7 @@ library(paletteer) ## for palettes
 # remotes::install_github("jbkunst/highcharter")
 library(highcharter)  ## most charts 
 library(plotly) ## for the snake plot. highcharter renders this plot too slowly
-#library(shiny)
+library(shiny)
 library(shinyjs)
 library(shinyWidgets)
 library(shinydashboard)
@@ -83,24 +110,22 @@ library(janitor) ## some cleaning utilities
 library(scales) ## for date and time scales
 library(gt) ## for easily customizable HTML table
 library(gtools) ## for the `mixedsort` function
-# remotes::install_github("reconhub/linelist")
-library(linelist) ## for the clean_variable_spellings function 
-# remotes::install_github("tidyverse/rvest")
-library(rvest) ## for the HTMLtotext function
+library(rvest) ## for the html_text2 function
 library(pander) ## for some tables?
 library(rio) ## easy importing
-library(huxtable) ## tables that output to docx and powerpoint
 library(flextable) ## called by huxtable in some functions
+library(huxtable) ## tables that output to docx and powerpoint
 library(rmarkdown) ## for knitting the report
-# remotes::install_github("davidgohel/officedown")
+# devtools::install_github("davidgohel/officedown")
 library(officedown) ## for PPTX docs etc.
+# devtools::install_github("rfortherestofus/pagedreport", ref = "main")
 library(pagedreport) ## for PDF reports 
 library(promises) ## not sure
 library(clock) ## not sure
 library(charlatan) ## for creating fake data
 library(httr) ## for pulling from godata API
 library(jsonlite) ## convert json files to data frames
-# remotes::install_github("amirmasoudabdol/preferably")
+# devtools::install_github("amirmasoudabdol/preferably")
 library(preferably) ## theme for documentation site
 library(tidyverse) ## tidyverse called last to avoid masking
 ```
@@ -183,7 +208,7 @@ Set a color legend for each country/ app version.
 This feeds the colors on active contacts plots (app tab 2)
 
 ```{r }
-if (PARAMS$country_code == "CIV" | PARAMS$country_code == "COG"){
+if (PARAMS$country_code %in% c("COG", "CIV", "SAMPLE") ){
   
 legend_df <-
   tribble(
@@ -222,6 +247,24 @@ legend_df <-
   mutate(breaks = fct_inorder(breaks)) %>%
   mutate(legend_index = row_number())
 }
+```
+
+# Misc objects
+
+```{r }
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+# ~~ Misc objects ----
+# ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+cols_to_exclude_from_filters <- 
+  ## filters not created for rows that change across each contact
+  c("follow_up_date", "follow_up_day", 
+    "follow_up_status", "follow_up_status_simple",
+    ## no filters for synthetic columns either
+    "row_id","row_number","sort_number", 
+    ## and no filters on names. 
+    ## Franck mentioned not printing names to app for privacy
+    "first_name", "last_name")
 ```
 
 # Highcharter themes
