--- a/vignettes/a03.1_server_functions_for_CIV.Rmd
+++ b/vignettes/a03.1_server_functions_for_CIV.Rmd
@@ -5,11 +5,24 @@ output:
    toc: yes
    toc_depth: 2
    toc_float: yes
+params:
+ building_docs: true
 ---
 
 ```{r include=FALSE}
 ## for knitting into documentation file
-knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
+
+if(exists("params") && !is.null(params$building_docs) && params$building_docs == TRUE ){
+  knitr::opts_chunk$set(echo = TRUE, eval = FALSE)
+}
+```
+
+NOTE: Section headers on this file are duplicated. 
+One set of headers exist for knitting this to an Rmarkdown (for documentation)
+The second set are hooks for RStudio's document outline feature.
+
+```{r }
+##
 ```
 
 # Read in preloaded data
@@ -45,6 +58,8 @@ preloaded_data_options <-
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~  UI Outputs --------------------
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+country_specific_UI_for_loading_data <- function(input, output){
 ```
 
 ## data_to_use_picker
@@ -169,6 +184,8 @@ output$country_specific_data_to_use_section <-
     )
   })
 
+}
+
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # ~  Read file functions ----
@@ -186,7 +203,7 @@ read_file_raw <- function(){
   
   
   data_to_use <-  input$data_to_use
-  preloaded_data_options <-  preloaded_data_options ## defined in global file
+  preloaded_data_options <-  preloaded_data_options ## defined above
   preloaded_data_choice <-  input$preloaded_data_choice
   uploaded_data_contacts_list_path <-  input$uploaded_data_contacts_list$datapath
   uploaded_data_follow_up_list_path <-  input$uploaded_data_follow_up_list$datapath
