--- a/vignettes/a05_report.Rmd
+++ b/vignettes/a05_report.Rmd
@@ -43,13 +43,11 @@ report_format <- 'html (page)'
 ```
 
 
-
-
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = FALSE, dpi = 300, eval = FALSE)
 
-
-number_of_chunks <- 22
+# ~~~~ Progress tracker  ----
+number_of_chunks <- 34
 current_chunk <- 0
 
 update_rmd_progress <- function(){
@@ -71,6 +69,7 @@ update_rmd_progress <- function(){
   }
   
 }
+
 
 ## turn off highcharter animations
 library(highcharter)
@@ -100,12 +99,31 @@ newtheme <-
 
 options(highcharter.theme = newtheme)
 
+# 
+# ## functions for documentation
+# building_docs <-  TRUE
+# 
+# 
+# print_def <- function(function_name) {
+#   if (building_docs == TRUE) {
+#     
+#     function_def <-
+#       capture.output(function_name) %>%
+#       styler::style_text() %>% 
+#         paste(collapse = "\n")
+#     
+#     ## print
+#     cat(paste("```r", function_def, "```", sep = "\n"))
+#     
+#   }
+# }
+# 
+# options(width=9999)
+# 
 
-update_rmd_progress()
 ```
 
-
-```{css}
+```{css, echo=FALSE}
 h1 {
   text - align:center
 }
@@ -116,9 +134,10 @@ body {
 .tab - content{
   margin - bottom:70px
 }
+
+## avoid wrapping (horizontal scrollbar instead)
+pre, code {white-space:pre !important; overflow-x:auto}
 ```
-
-
 
 ```{r paramsSetNonShiny}
 ## if we are knitting outside of shiny, we cannot rely on reactives.
@@ -127,32 +146,27 @@ body {
 
 if (params$rendered_by_shiny == FALSE){
   
-
-  output <- list()
+  source(here::here("global.R"))
+  
+  ## artificial input since we're not in shiny context
   input <- list()
   
-  source(here::here("global.R"))
   source(here::here("helper_scripts/server_functions.R")) 
 
-
-  
   input$data_to_use <- "Use preloaded data"
   preloaded_data_options <-  preloaded_data_options ## defined in global file
   input$preloaded_data_choice <- "Sample tracing data"
   cols_to_exclude_from_filters <- c("placeholder_non_column")
-  input$uploaded_data_contacts_list$datapath <-
-    here::here("data/Formulaire_Identification_contact_CIV_-_latest_version_-_labels_-_2021-02-20-13-17-18.xlsx")
-  input$uploaded_data_follow_up_list$datapath <-
-    here::here("data/Formulaire_Suivi_contacts_CIV_-_latest_version_-_labels_-_2021-02-20-14-25-48.xlsx")
-  report_format <- "html (page)"
-
-  if (input$data_to_use == "Use preloaded data")   input$select_date_of_review <- as.Date("2021-04-13")
-  if (input$data_to_use == "Use uploaded data")   input$select_date_of_review <- as.Date("2021-02-20")
-  
-  todays_date <- input$select_date_of_review
+  input$select_date_of_review <- as.Date("2021-04-13")
   
       
+  report_format <- "html (page)"
+  todays_date <- input$select_date_of_review
 
+  url <- "https://godata-r13.who.int/"
+  username <- "godata_api@who.int"
+  password <- "godata_api@who"
+  outbreak_id <- "3b5554d7-2c19-41d0-b9af-475ad25a382b"
 
   # ~~~~ read_file_raw ----
   
@@ -171,37 +185,38 @@ if (params$rendered_by_shiny == FALSE){
     read_file_filtered(contacts_df_long_transformed,
                        input$select_date_of_review)
 
+  PARAMS$documentation <-  TRUE
+
 }
   
-update_rmd_progress()
 ```
 
-
 ```{r paramsSetShiny}
-
 ## if knitting within shiny
 if (params$rendered_by_shiny == TRUE){
+  
+# ~~~~ Source functions  ----
+
   source(here::here("global.R"))
   source(here::here("helper_scripts/server_functions.R")) 
 
-contacts_df_long <- params$contacts_df_long
-todays_date <- params$todays_date
-report_format <- params$report_format
+
+  ## parameters
+  contacts_df_long <- params$contacts_df_long
+  todays_date <- params$todays_date
+  report_format <- params$report_format
 }
 
 
 update_rmd_progress()
 ```
-
 
 # VALUE BOX SUMMARIES
 
 ```{r valueBoxes1, fig.width=3.5, fig.height=2, out.width="48%"}
-
-contacts_per_day_value_box(contacts_df_long,
+new_contacts_per_day_value_box(contacts_df_long,
                            todays_date,
                            report_format)
-
 
 cumulative_contacts_value_box(contacts_df_long,
                               todays_date,
@@ -209,7 +224,6 @@ cumulative_contacts_value_box(contacts_df_long,
 
 update_rmd_progress()
 ```
-
 
 ```{r valueBoxes2, fig.width=3.5, fig.height=2, out.width="48%"}
 
@@ -225,85 +239,253 @@ pct_contacts_followed_value_box(contacts_df_long,
 update_rmd_progress()
 ```
 
+<!------------------>
+<!-- NEW CONTACTS -->
+<!------------------>
 
-# OUTPUTS PERTAINING TO ALL CONTACTS {.unlisted .unnumbered}
+```{r results = "asis"}
+new_contacts_today_row_title(todays_date, report_format)
+```
 
-# Admin level 1 breakdown
+##  {.unlisted .unnumbered}
 
-## {.unlisted .unnumbered}
+```{r results = "asis"}
+new_contacts_today_text(contacts_df_long,
+                        todays_date,
+                        report_format)
 
-```{r allContactsPerAdmin1Text, results = "asis"}
-all_contacts_per_admin_1_text(contacts_df_long,
-                               report_format)
+update_rmd_progress()
+```
+
+### New contacts bar chart
+
+```{r}
+new_contacts_today_bar_chart(contacts_df_long,
+                        todays_date,
+                        report_format)
+update_rmd_progress()
+```
+
+### New contacts sunburst plot
+
+```{r}
+new_contacts_today_sunburst_plot(contacts_df_long,
+                        todays_date,
+                        report_format)
+
+update_rmd_progress()
+```
+
+### New contacts table
+
+```{r}
+new_contacts_today_table(contacts_df_long,
+                        todays_date,
+                        report_format)
 
 update_rmd_progress()
 ```
 
 
-### Admin level 1 breakdown bar chart
+<!-- new contacts historical -->
 
-```{r allContactsPerAdmin1BarChart}
-all_contacts_per_admin_1_bar_chart(contacts_df_long,
-                                   report_format)
 
-update_rmd_progress()
+```{r results = "asis"}
+new_contacts_historical_row_title(report_format)
 ```
 
-### Admin level 1 breakdown sunburst plot
+##  {.unlisted .unnumbered}
 
-```{r allContactsPerAdmin1SunburstPlot}
-all_contacts_per_admin_1_sunburst_plot(contacts_df_long,
-                                      report_format)
-
-update_rmd_progress()
-```
-
-### Admin level 1 breakdown table
-
-```{r allContactsPerAdmin1Table}
-all_contacts_per_admin_1_table(contacts_df_long,
-                              report_format)
-
-update_rmd_progress()
-```
-
-<!-- # ~~~ main_tab_row_2 ---- -->
-
-
-# Admin level 1 trends
-
-## {.unlisted .unnumbered}
-
-```{r contactsUnderSurveillancePerAdmin1OverTimeText, results = "asis"}
-contacts_surveilled_admin_1_text(contacts_df_long,
+```{r, results = "asis"}
+new_contacts_historical_text(contacts_df_long,
                                  todays_date,
                                  report_format)
 update_rmd_progress()
 ```
 
+### Absolute numbers
 
-### Admin level 1 trends, absolute counts
-```{r contactsUnderSurveillancePerAdmin1OverTimeBarChart}
-contacts_surveilled_admin_1_bar_chart(contacts_df_long,
+```{r}
+new_contacts_historical_bar_chart(contacts_df_long,
                                       todays_date,
                                       report_format)
 update_rmd_progress()
 ```
 
-### Admin level 1 trends, relative proportions
-```{r contactsUnderSurveillancePerAdmin1OverTimeBarChartRelative}
-contacts_surveilled_admin_1_bar_chart_relative(contacts_df_long,
+### Relative proportions
+
+```{r}
+new_contacts_historical_bar_chart_relative(contacts_df_long,
+                                               todays_date,
+                                               report_format)
+update_rmd_progress()
+```
+
+<!------------------------>
+<!-- CUMULATIVE CONTACTS -->
+<!------------------------>
+
+
+```{r results = "asis"}
+cumul_contacts_today_row_title(todays_date, report_format)
+```
+
+##  {.unlisted .unnumbered}
+
+```{r results = "asis"}
+cumul_contacts_today_text(contacts_df_long,
+                        report_format)
+
+update_rmd_progress()
+```
+
+### Cumulative contacts bar chart
+
+```{r}
+cumul_contacts_today_bar_chart(contacts_df_long,
+                        report_format)
+update_rmd_progress()
+```
+
+### Cumulative contacts sunburst plot
+
+```{r}
+cumul_contacts_today_sunburst_plot(contacts_df_long,
+                        report_format)
+
+update_rmd_progress()
+```
+
+### Cumulative contacts table
+
+```{r}
+cumul_contacts_today_table(contacts_df_long,
+                        report_format)
+
+update_rmd_progress()
+```
+
+
+<!-- cumul contacts historical -->
+
+
+```{r results = "asis"}
+cumul_contacts_historical_row_title(report_format)
+```
+
+##  {.unlisted .unnumbered}
+
+```{r, results = "asis"}
+cumul_contacts_historical_text(contacts_df_long,
+                                 report_format)
+update_rmd_progress()
+```
+
+### Absolute numbers
+
+```{r}
+cumul_contacts_historical_bar_chart(contacts_df_long,
+                                      todays_date,
+                                      report_format)
+update_rmd_progress()
+```
+
+### Relative proportions
+
+```{r}
+cumul_contacts_historical_bar_chart_relative(contacts_df_long,
                                                todays_date,
                                                report_format)
 update_rmd_progress()
 ```
 
 
-<!-- # ~~~ main_tab_row_3 ---- -->
+<!------------------>
+<!-- ACTIVE CONTACTS -->
+<!------------------>
+
+```{r results = "asis"}
+active_contacts_today_row_title(todays_date, report_format)
+```
+
+##  {.unlisted .unnumbered}
+
+```{r results = "asis"}
+active_contacts_today_text(contacts_df_long,
+                        todays_date,
+                        report_format)
+
+update_rmd_progress()
+```
+
+### Contacts under surveillance bar chart
+
+```{r}
+active_contacts_today_bar_chart(contacts_df_long,
+                        todays_date,
+                        report_format)
+update_rmd_progress()
+```
+
+### Contacts under surveillance sunburst plot
+
+```{r}
+active_contacts_today_sunburst_plot(contacts_df_long,
+                        todays_date,
+                        report_format)
+
+update_rmd_progress()
+```
+
+### Contacts under surveillance table
+
+```{r}
+active_contacts_today_table(contacts_df_long,
+                        todays_date,
+                        report_format)
+
+update_rmd_progress()
+```
+
+
+<!-- active contacts historical -->
+
+
+```{r results = "asis"}
+active_contacts_historical_row_title(report_format)
+```
+
+##  {.unlisted .unnumbered}
+
+```{r, results = "asis"}
+active_contacts_historical_text(contacts_df_long,
+                                 todays_date,
+                                 report_format)
+update_rmd_progress()
+```
+
+### Absolute numbers
+
+```{r}
+active_contacts_historical_bar_chart(contacts_df_long,
+                                      todays_date,
+                                      report_format)
+update_rmd_progress()
+```
+
+### Relative proportions
+
+```{r}
+new_contacts_historical_bar_chart_relative(contacts_df_long,
+                                               todays_date,
+                                               report_format)
+update_rmd_progress()
+```
+
 
 # Contacts per case
 
-## {.unlisted .unnumbered}
+##  {.unlisted .unnumbered}
 
 ```{r totalContactsPerCaseText, results = "asis"}
 total_contacts_per_case_text(contacts_df_long,
@@ -312,8 +494,7 @@ total_contacts_per_case_text(contacts_df_long,
 update_rmd_progress()
 ```
 
-
-### Contacts per case table
+### Contacts per case, table
 
 ```{r totalContactsPerCaseTable}
 total_contacts_per_case_table(contacts_df_long,
@@ -322,8 +503,7 @@ total_contacts_per_case_table(contacts_df_long,
 update_rmd_progress()
 ```
 
-
-### Contacts per case donut plot
+### Contacts per case, donut plot
 
 ```{r totalContactsPerCaseDonutPlot}
 total_contacts_per_case_donut_plot(contacts_df_long,
@@ -332,7 +512,7 @@ total_contacts_per_case_donut_plot(contacts_df_long,
 update_rmd_progress()
 ```
 
-### Contacts per case bar chart
+### Contacts per case, bar chart
 
 ```{r totalContactsPerCaseBarChart}
 total_contacts_per_case_bar_chart(contacts_df_long,
@@ -341,11 +521,9 @@ total_contacts_per_case_bar_chart(contacts_df_long,
 update_rmd_progress()
 ```
 
-
-
 # Case-contact relationships
 
-## {.unlisted .unnumbered}
+##  {.unlisted .unnumbered}
 
 ```{r totalContactsPerLinkTypeText, results = "asis"}
 total_contacts_per_link_type_text(contacts_df_long,
@@ -354,7 +532,7 @@ total_contacts_per_link_type_text(contacts_df_long,
 update_rmd_progress()
 ```
 
-### Case-contact relationships donut plot
+### Case-contact relationships, donut plot
 
 ```{r totalContactsPerLinkTypeDonutPlot}
 total_contacts_per_link_type_donut_plot(contacts_df_long,
@@ -363,7 +541,7 @@ total_contacts_per_link_type_donut_plot(contacts_df_long,
 update_rmd_progress()
 ```
 
-### Case-contact relationships bar chart
+### Case-contact relationships, bar chart
 
 ```{r totalContactsPerLinkTypeBarChart}
 total_contacts_per_link_type_bar_chart(contacts_df_long,
@@ -372,11 +550,9 @@ total_contacts_per_link_type_bar_chart(contacts_df_long,
 update_rmd_progress()
 ```
 
-# OUTPUTS PERTAINING TO ACTIVE CONTACTS {.unlisted .unnumbered}
-
 # Follow-up timelines
 
-## {.unlisted .unnumbered}
+##  {.unlisted .unnumbered}
 
 ```{r activeContactsTimelineText, results = "asis"}
 active_contacts_timeline_text(contacts_df_long,
@@ -386,7 +562,7 @@ active_contacts_timeline_text(contacts_df_long,
 
 ### Follow-up summary bar chart
 
-```{r activeContactsBreakdownBarChart, fig.width = 7, dpi = if(report_format %in% c("html (page)", "html (slides)")) {96} else {300} }
+```{r activeContactsBreakdownBarChart, fig.width = 7, dpi = if(params$report_format %in% c("html (page)", "html (slides)")) {96} else {300} }
 active_contacts_breakdown_bar_chart(contacts_df_long,
                            todays_date,
                            report_format,
@@ -398,7 +574,7 @@ update_rmd_progress()
 
 ### Follow-up timeline snake plot
 
-```{r activeContactsTimelineSnakePlot, fig.width = 7, dpi =  if(report_format %in% c("html (page)", "html (slides)")) {96} else {300} }
+```{r activeContactsTimelineSnakePlot, fig.width = 7, dpi =  if(params$report_format %in% c("html (page)", "html (slides)")) {96} else {300} }
 active_contacts_timeline_snake_plot(contacts_df_long,
                            todays_date,
                            report_format,
@@ -407,10 +583,9 @@ active_contacts_timeline_snake_plot(contacts_df_long,
 update_rmd_progress()
 ```
 
-
 # Contacts not seen recently
 
-## {.unlisted .unnumbered}
+##  {.unlisted .unnumbered}
 
 ```{r lostContactsLinelistText, results = "asis"}
 lost_contacts_linelist_text(contacts_df_long,
@@ -437,5 +612,3 @@ lost_contacts_linelist_table(contacts_df_long,
   .$output_table
 
 ```
-
-
